# aoc

./: .gitignore  README.md  pyproject.toml
aoc2021/day01/: day1.py
aoc2021/day02/: day2.py
aoc2021/day03/: day3.py
aoc2021/day06/: day6.py
aoc2021/day07/: day7.py
aoc2022/day02/: day2.py
aoc2022/day03/: day3.py
aoc2022/day06/: day6.py
aoc2022/day13/: day13.py
aoc2022/day14/: day14.py
aoc2022/day15/: day15.py
aoc2022/day21/: day21.py
aoc2023/day05/: day5.py
aoc2023/day07/: day7.py
old_years/aoc2021/day01/: day1.py
old_years/aoc2021/day04/: day4.py
old_years/aoc2021/day05/: day5.py
old_years/aoc2022/day01/: day1.py
old_years/aoc2022/day04/: day4.py
old_years/aoc2022/day05/: day5.py
old_years/aoc2022/day07/: day7.py
old_years/aoc2022/day08/: day8.py
old_years/aoc2022/day09/: day9.py
old_years/aoc2022/day10/: day10.py
old_years/aoc2022/day11/: day11.py
old_years/aoc2022/day12/: day12.py
old_years/aoc2022/day16/: day16.py
old_years/aoc2022/day18/: day18.py
old_years/aoc2022/day20/: day20.py
old_years/aoc2023/day01/: day1.py
old_years/aoc2023/day02/: day2.py
old_years/aoc2023/day03/: day3.py
old_years/aoc2023/day04/: day4.py
old_years/aoc2023/day06/: day6.py
old_years/aoc2023/day08/: day8.py
old_years/aoc2023/day09/: day9.py
old_years/aoc2023/day10/: day10.py
old_years/aoc2023/day11/: day11.py
old_years/aoc2023/day12/: day12.py
old_years/aoc2023/day13/: day13.py
src/aoc/: automate.py  util.py
src/aoc/2024/1/: solution.py  test_solution.py
src/aoc/template/: solution.py  test_solution.py
(+24 files in other folders)
